# oas2mcp

./: .dockerignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: dependabot.yaml  release.yaml
.github/workflows/: build.yaml  chart.yaml  quality.yaml  release.yaml
charts/oas2mcp/: .helmignore  Chart.yaml  README.md  values-lint.yaml  values.yaml
charts/oas2mcp/templates/: _helpers.tpl  ingress.yaml
charts/oas2mcp/templates/oas2mcp/: configmap.yaml  deployment.yaml  secret.yaml  service-monitor.yaml  service.yaml  serviceaccount.yaml
examples/: petstore.yaml  xquik-openapi.md
src/: auth.rs  cli.rs  filter.rs  http.rs  main.rs  oauth.rs  openapi.rs  server.rs  telemetry.rs  tools.rs  transport.rs
src/transport/: sse.rs
tests/fixtures/: test_rsa_key.pem
