[package]
name = "oas2mcp"
version = "0.1.0"
edition = "2024"
description = "Load an OpenAPI document at startup and expose it as a Model Context Protocol (MCP) server over stdio, SSE, or Streamable HTTP."
authors = ["Guillaume Leroy <gleroy@therealm.tech>"]
repository = "https://github.com/therealm-tech/oas2mcp"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
rmcp = { version = "1.8", features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
] }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "io-std",
    "fs",
    "net",
    "time",
] }
tokio-stream = "0.1"
futures = "0.3"
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "charset",
    "http2",
] }
openapiv3 = "2.2"
arc-swap = "1"
humantime = "2"
regex = "1"
http = "1"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
url = "2"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
